--- a/practiceforinterview/src/Component/index.html
+++ b/practiceforinterview/src/Component/index.html
@@ -15,9 +15,9 @@
     let numContainer = document.getElementById("counter");
     let value = 0;
 
-    let btnInc = document.querySelector("#increment");
-    let btnDec = document.querySelector("#decrement");
-    let btnReset = document.querySelector("#reset");
+    let btnInc = document.getElementById("increment");
+    let btnDec = document.getElementById("decrement");
+    let btnReset = document.getElementById("reset");
 
 
 
